<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DodajActivity"
    tools:showIn="@layout/activity_dodaj">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/pln"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/kwota"
            android:gravity="center"
            android:text="@string/PLN"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/kwota"
            android:layout_width="287dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:hint="@string/Kwota"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="24sp"
            android:textStyle="normal|bold" />
    </RelativeLayout>

    <!--    <Button-->
<!--        android:id="@+id/Anuluj"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:textSize="20dp"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginStart="5dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:background="#ff050d"-->
<!--        android:onClick="Anuluj"-->
<!--        android:text="@string/anuluj" />-->


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="173dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


        <EditText
            android:id="@+id/uwagi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/Uwagi"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="20dp" />

        <EditText
            android:id="@+id/odbiorca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/Odbiorca"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="24sp" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/data"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/termin"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/tvdate"
            android:text="@string/termin"
            android:textSize="24dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <RadioButton
            android:id="@+id/powtarzasie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:checked="false"
            android:gravity="center"
            android:onClick="wlaczCoIlePlatnosc"
            android:text="@string/powtarzasie" />

        <RadioButton
            android:id="@+id/niepowtarzasie"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@+id/powtarzasie"
            android:checked="false"
            android:gravity="center"
            android:onClick="wylaczCoIlePlatnosc"
            android:text="@string/niepowtarzasie" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RadioGroup>




    <LinearLayout
        android:id="@+id/row1LinearLayout"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="500dp">

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:lines="2"
            android:text="New Button"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="13dp" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:lines="2"
            android:text="New Button"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="13dp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="104dp"

            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/coile"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:entries="@array/coile"
                android:textSize="24sp">

            </Spinner>

            <TextView
                android:id="@+id/powiadomienie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/powiadomienie"
                android:textSize="16dp">

            </TextView>

            <Spinner
                android:id="@+id/powtarza"
                android:layout_width="184dp"
                android:layout_height="52dp"

                android:entries="@array/powtarza"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>



    <EditText
        android:id="@+id/dzien"
        android:layout_width="386dp"
        android:layout_height="197dp"

        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="534dp" />

    <!--    <Button-->
<!--        android:id="@+id/Akceptuj"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:textSize="20dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:background="#2e840e"-->
<!--        android:onClick="Akceptuj"-->
<!--        android:enabled="false"-->
<!--        android:text="@string/akceptuj" />-->


</androidx.constraintlayout.widget.ConstraintLayout>